--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="icon" type="image/png" href="../img/iconos/logo.png"/>
     <script src="./javascript/home.js"></script>
     <title>DinoDTech</title>
 </head>
 <header>
-    <?php
-        include './lib/header.php';
-    ?>
+    <div class="contenedor">
+            <nav>
+                <a href="../index.html"><img src="./img/iconos/logo.png" alt="logo" class="logo"></a>
+                <ul>
+                    <li><a href="../pages/daw.html">Desarrollo Web</a></li>
+                    <li><a href="../pages/hosting.html">Hosting</a></li>
+                    <li><a href="../pages/seo.html">SEO</a></li>
+                    <li><a href="../pages/gsmedia.html">Gestión de Redes Sociales</a></li>
+                    <li><a href="../pages/blog.html">Blog</a></li>
+                    <li><button class="empezamos" id="empezamos">¿Empezamos?</button></li>
+                </ul>
+            </nav>
+        </div>
 </header>
 <body>
     <main>
@@ -38,8 +49,18 @@
         </div>
     </main>
 <footer>
-    <?php
-        include './lib/footer.php';
-    ?>
+<div class="contenedor">
+        <nav>
+        <a href="index.html"><img src="./img/iconos/logo.png" alt="logo" class="logo"></a>
+            <ul>
+                <li><a href="contacto.php">Contacto</a></li>
+                <li><a href=""><img src="./img/iconos/icono_instagram.png" alt="instagram" class="icono"></a></li>
+                <li><a href=""><img src="./img/iconos/icono_facebook.png" alt="facebook" class="icono"></a></li>
+                <li><a href=""><img src="./img/iconos/icono_twitter.png" alt="twitter" class="icono"></a></li>
+                <li><a href="aviso-legal.php">Aviso Legal</a></li>
+                <li><a href="cookies.php">Políticas de Privacidad y Cookies</a></li>
+            </ul>
+        </nav>
+    </div>
 </footer>
 </html>
