--- a/pages/daw.html
+++ b/pages/daw.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/daw.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="icon" type="image/png" href="../img/iconos/logo.png"/>
     <title>Desarrollo Web</title>
 </head>
 <body>
 <header>
-    <div class="contenedor">
+    <section class="contenedor">
         <nav>
             <a href="../index.html"><img src="../img/iconos/logo.png" alt="logo" class="logo"></a>
             <ul>
@@ -22,36 +24,37 @@
                 <li><button class="empezamos" id="empezamos">¿Empezamos?</button></li>
             </ul>
         </nav>
-    </div>
+    </section>
 </header>
 <main>
-    <main>
-        <div class="contenedor">
-            <img src="./img/home/home1.jpg" alt="home" class="img-logo">
-        </div>
-        <div class="contenedor-paneles">
-            <div class="carta">
-                <h2>Desarrollo Web</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <section class="contenedor-imagen">
+        <h1>Desarrollo Web</h1>
+        <img src="../img/home/code.jpg" alt="home" class="img-logo">
+    </section>
+    <section class="contenedor-paneles">
+        <section class="carta">
+            <h2>Básico</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <button class="contratar">Contratar</button>
+        </section>
+        <section class="carta">
+            <h2>Avanzado</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <button class="contratar">Contratar</button>
+        </section>
+        <section class="carta">
+            <h2>Profesional</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <div>
+                <button class="contratar">Contratar</button>
             </div>
-            <div class="carta">
-                <h2>Hosting</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            </div>
-            <div class="carta">
-                <h2>SEO</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            </div>
-            <div class="carta">
-                <h2>Gestión de Redes Sociales</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            </div>
-        </div>
-    </main>
+        </section>
+    </section>
+</main>
 <footer>
 </main>
 <footer>
-    <div class="contenedor">
+    <section class="contenedor">
         <nav>
         <a href="index.html"><img src="../img/iconos/logo.png" alt="logo" class="logo"></a>
             <ul>
@@ -63,7 +66,7 @@
                 <li><a href="cookies.php">Políticas de Privacidad y Cookies</a></li>
             </ul>
         </nav>
-    </div>
+    </section>
 </footer>
 </body>
 </html>
