--- a/pages/daw.html
+++ b/pages/daw.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/daw.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="icon" type="image/png" href="../img/iconos/logo.png"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
     <title>Desarrollo Web</title>
 </head>
 <body>
@@ -31,23 +32,57 @@
         <h1>Desarrollo Web</h1>
         <img src="../img/home/code.jpg" alt="home" class="img-logo">
     </section>
+    <section class="contenedor-titulo">
+        <h2>PLANES DE DESARROLLO WEB</h2>
+    </section>
     <section class="contenedor-paneles">
         <section class="carta">
-            <h2>Básico</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <h3>Básico</h3>
+            <h4>499€</h4>
+            <ul>
+                <li>Máximo 4 página</li>
+                <li>Diseño e Imagen de tu página web</li>
+                <li>Imágenes de stock</li>
+                <li>Adaptada a móviles y 100% responsive</li>
+                <li>Formulario de contacto</li>
+                <li>1 idioma</li>
+                <li>Sitio Web seguro (HTTPS)</li>
+                <li>Página web o blog</li>
+            </ul>
             <button class="contratar">Contratar</button>
         </section>
         <section class="carta">
-            <h2>Avanzado</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <h3>Avanzado</h3>
+            <h4>799€</h4>
+            <ul>
+                <li>Máximo 8 páginas</li>
+                <li>Diseño e Imagen de tu página web</li>
+                <li>Imágenes de stock</li>
+                <li>Adaptada a móviles y 100% responsive</li>
+                <li>Hasta 5 formularios</li>
+                <li>2 idiomas</li>
+                <li>Sitio Web seguro (HTTPS)</li>
+                <li>Creación de máximo 2 perfiles en redes sociales</li>
+                <li>Blog básico</li>
+            </ul>
             <button class="contratar">Contratar</button>
         </section>
         <section class="carta">
-            <h2>Profesional</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            <div>
-                <button class="contratar">Contratar</button>
-            </div>
+            <h3>Profesional</h3>
+            <h4>1400€</h4>
+            <ul>
+                <li>Máximo 10 páginas</li>
+                <li>Diseño e Imagen de tu página web</li>
+                <li>Imágenes de stock</li>
+                <li>Adaptada a móviles y 100% responsive</li>
+                <li>Hasta 5 formularios</li>
+                <li>3 idiomas</li>
+                <li>Sitio Web seguro (HTTPS)</li>
+                <li>Creación de máximo 2 perfiles en redes sociales</li>
+                <li>Soporte por 6 meses</li>
+                <li>Blog personalizado</li>
+            </ul>
+            <button class="contratar">Contratar</button>
         </section>
     </section>
 </main>
