--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="icon" type="image/png" href="../img/iconos/logo.png"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
     <script src="./javascript/home.js"></script>
     <title>DinoDTech</title>
 </head>
