--- a/pages/daw.html
+++ b/pages/daw.html
@@ -49,7 +49,7 @@
                 <li>Sitio Web seguro (HTTPS)</li>
                 <li>Página web o blog</li>
             </ul>
-            <button class="contratar">Contratar</button>
+            <button class="contratar contratar-1">Contratar</button>
         </section>
         <section class="carta">
             <h3>Avanzado</h3>
@@ -65,7 +65,7 @@
                 <li>Creación de máximo 2 perfiles en redes sociales</li>
                 <li>Blog básico</li>
             </ul>
-            <button class="contratar">Contratar</button>
+            <button class="contratar contratar-2">Contratar</button>
         </section>
         <section class="carta">
             <h3>Profesional</h3>
@@ -82,7 +82,7 @@
                 <li>Soporte por 6 meses</li>
                 <li>Blog personalizado</li>
             </ul>
-            <button class="contratar">Contratar</button>
+            <button class="contratar contratar-3">Contratar</button>
         </section>
     </section>
 </main>
