--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
 </header>
 <body>
     <main>
-        <section class="contenedor-imagen">
-            <img src="./img/home/home1.jpg" alt="home" class="img-logo">
+        <section class="contenedor-home">
+            <section class="contenedor-slogan">
+                <h1>Bienvenido a tu nueva</h1>
+            </section>
+            <section class="contenedor-imagen">
+                <img src="./img/home/code.jpg" alt="">
+            </section>
         </section>
         <section class="contenedor-marcas">
             <h2>Algunos de nuestros clientes</h2>
