--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <main>
         <section class="contenedor-home">
             <section class="contenedor-slogan">
-                <h1>Bienvenido a tu nueva</h1>
+                <h1>Te ayudamos a digitalizar tu negocio</h1>
             </section>
             <section class="contenedor-imagen">
-                <img src="./img/home/code.jpg" alt="">
+                <img src="./img/home/imagen-bombilla.png" alt="">
             </section>
         </section>
         <section class="contenedor-marcas">
