--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 <header>
     <section class="contenedor">
             <nav>
-                <a href="../index.html"><img src="./img/iconos/logo.png" alt="logo" class="logo"></a>
+                <a href="../index.html"><img src="./img/logo.png" alt="logo" class="logo"></a>
                 <ul>
                     <li><a href="../pages/daw.html">Desarrollo Web</a></li>
                     <li><a href="../pages/hosting.html">Hosting</a></li>
                     <li><a href="../pages/seo.html">SEO</a></li>
+                    <li><a href="../pages/mantenimiento.html">Mantenimiento</a></li>
                     <li><a href="../pages/gsmedia.html">Gestión de Redes Sociales</a></li>
                     <li><a href="../pages/blog.html">Blog</a></li>
                     <li><button class="empezamos" id="empezamos">¿Empezamos?</button></li>
@@ -39,14 +40,14 @@
         </section>
         <section class="contenedor-marcas">
             <h2>Algunos de nuestros clientes</h2>
-            <img src="./img/home/marcas2.png" alt="marcas" class="marcas">
+            <img src="./img/home/marcas.png" alt="marcas" class="marcas">
         </section>
         </div>
     </main>
 <footer>
 <section class="contenedor">
         <nav>
-        <a href="index.html"><img src="./img/iconos/logo.png" alt="logo" class="logo"></a>
+        <a href="index.html"><img src="./img/logo.png" alt="logo" class="logo"></a>
             <ul>
                 <li><a href="contacto.php">Contacto</a></li>
                 <li><a href=""><img src="./img/iconos/icono_instagram.png" alt="instagram" class="icono"></a></li>
