--- a/pages/daw.html
+++ b/pages/daw.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/daw.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="icon" type="image/png" href="../img/iconos/logo.png"/>
+    <link rel="icon" type="image/png" href="../img/logo.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
     <title>Desarrollo Web</title>
 </head>
@@ -15,7 +15,7 @@
 <header>
     <section class="contenedor">
         <nav>
-            <a href="../index.html"><img src="../img/iconos/logo.png" alt="logo" class="logo"></a>
+            <a href="../index.html"><img src="../img/logo.png" alt="logo" class="logo"></a>
             <ul>
                 <li><a href="../pages/daw.html">Desarrollo Web</a></li>
                 <li><a href="../pages/hosting.html">Hosting</a></li>
@@ -90,7 +90,7 @@
 <footer>
     <section class="contenedor">
         <nav>
-        <a href="index.html"><img src="../img/iconos/logo.png" alt="logo" class="logo"></a>
+        <a href="index.html"><img src="../img/logo.png" alt="logo" class="logo"></a>
             <ul>
                 <li><a href="contacto.php">Contacto</a></li>
                 <li><a href=""><img src="../img/iconos/icono_instagram.png" alt="instagram" class="icono"></a></li>
