--- a/pages/seo.html
+++ b/pages/seo.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/home.css">
-    <link rel="icon" type="image/png" href="../img/iconos/logo.png"/>
+    <link rel="icon" type="image/png" href="../img/logo.png"/>
     <title>Desarrollo Web</title>
 </head>
 <body>
 <header>
     <div class="contenedor">
         <nav>
-            <a href="../index.html"><img src="../img/iconos/logo.png" alt="logo" class="logo"></a>
+            <a href="../index.html"><img src="../img/logo.png" alt="logo" class="logo"></a>
             <ul>
                 <li><a href="../pages/daw.html">Desarrollo Web</a></li>
                 <li><a href="../pages/hosting.html">Hosting</a></li>
@@ -31,7 +31,7 @@
 <footer>
     <div class="contenedor">
         <nav>
-        <a href="index.html"><img src="../img/iconos/logo.png" alt="logo" class="logo"></a>
+        <a href="index.html"><img src="../img/logo.png" alt="logo" class="logo"></a>
             <ul>
                 <li><a href="contacto.php">Contacto</a></li>
                 <li><a href=""><img src="../img/iconos/icono_instagram.png" alt="instagram" class="icono"></a></li>
