--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 <body>
     <main>
         <section class="contenedor-home">
-            <section class="contenedor-slogan">
+            <article class="contenedor-slogan">
                 <h1>Te ayudamos a digitalizar tu negocio</h1>
-            </section>
-            <section class="contenedor-imagen">
+            </article>
+            <article class="contenedor-imagen">
                 <img src="./img/home/imagen-bombilla.png" alt="">
-            </section>
+            </article>
         </section>
         <section class="contenedor-marcas">
             <h2>Algunos de nuestros clientes</h2>
