--- a/pages/daw.html
+++ b/pages/daw.html
@@ -37,7 +37,7 @@
         <h2>PLANES DE DESARROLLO WEB</h2>
     </section>
     <section class="contenedor-paneles">
-        <section class="carta">
+        <article class="carta">
             <h3>Básico</h3>
             <h4>499€</h4>
             <ul>
@@ -51,8 +51,8 @@
                 <li>Página web o blog</li>
             </ul>
             <button class="contratar contratar-1">Contratar</button>
-        </section>
-        <section class="carta">
+        </article>
+        <article class="carta">
             <h3>Avanzado</h3>
             <h4>799€</h4>
             <ul>
@@ -67,8 +67,8 @@
                 <li>Blog básico</li>
             </ul>
             <button class="contratar contratar-2">Contratar</button>
-        </section>
-        <section class="carta">
+        </article>
+        <article class="carta">
             <h3>Profesional</h3>
             <h4>1400€</h4>
             <ul>
@@ -84,7 +84,7 @@
                 <li>Blog personalizado</li>
             </ul>
             <button class="contratar contratar-3">Contratar</button>
-        </section>
+        </article>
     </section>
 </main>
 <footer>
