--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/footer.css">
-    <link rel="icon" type="image/png" href="../img/iconos/logo.png"/>
+    <link rel="icon" type="image/png" href="../img/logo.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
-    <script src="./javascript/home.js"></script>
     <title>DinoDTech</title>
 </head>
 <header>
     <section class="contenedor">
+        <!-- SECTION CON EL MENÚ COMPUESTO POR UN NAV CON UNA LISTA DE ENLACES Y UN BOTON -->
             <nav>
                 <a href="../index.html"><img src="./img/logo.png" alt="logo" class="logo"></a>
                 <ul>
@@ -30,6 +30,7 @@
 </header>
 <body>
     <main>
+        <!-- CONTIENE DOS SECTIONS -->
         <section class="contenedor-home">
             <article class="contenedor-slogan">
                 <h1>Te ayudamos a digitalizar tu negocio</h1>
@@ -42,7 +43,6 @@
             <h2>Algunos de nuestros clientes</h2>
             <img src="./img/home/marcas.png" alt="marcas" class="marcas">
         </section>
-        </div>
     </main>
 <footer>
 <section class="contenedor">
