--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1>Te ayudamos a digitalizar tu negocio</h1>
             </article>
             <article class="contenedor-imagen">
-                <img src="./img/home/imagen-bombilla.png" alt="">
+                <img src="./img/home/imagen-bombilla.png" alt="imagen-bombilla">
             </article>
         </section>
         <section class="contenedor-marcas">
