--- a/index.html
+++ b/index.html
@@ -7,56 +7,58 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/footer.css">
-    <link rel="icon" type="image/png" href="../img/iconos/logo.png"/>
+    <link rel="icon" type="image/png" href="../img/logo.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
     <script src="./javascript/home.js"></script>
     <title>DinoDTech</title>
 </head>
-<header>
+<body>
+    <header>
+        <section class="contenedor">
+                <nav>
+                    <a href="../index.html"><img src="./img/logo.png" alt="logo" class="logo"></a>
+                    <ul>
+                        <li><a href="../pages/daw.html">Desarrollo Web</a></li>
+                        <li><a href="../pages/hosting.html">Hosting</a></li>
+                        <li><a href="../pages/seo.html">SEO</a></li>
+                        <li><a href="../pages/mantenimiento.html">Mantenimiento</a></li>
+                        <li><a href="../pages/gsmedia.html">Gestión de Redes Sociales</a></li>
+                        <li><a href="../pages/blog.html">Blog</a></li>
+                        <li><button class="empezamos" id="empezamos">¿Empezamos?</button></li>
+                    </ul>
+                </nav>
+            </section>
+    </header>
+
+        <main>
+            <section class="contenedor-home">
+                <section class="contenedor-slogan">
+                    <h1>Te ayudamos a digitalizar tu negocio</h1>
+                </section>
+                <section class="contenedor-imagen">
+                    <img src="./img/home/imagen-bombilla.png" alt="">
+                </section>
+            </section>
+            <section class="contenedor-marcas">
+                <h2>Algunos de nuestros clientes</h2>
+                <img src="./img/home/marcas.png" alt="marcas" class="marcas">
+            </section>
+            </div>
+        </main>
+    <footer>
     <section class="contenedor">
             <nav>
-                <a href="../index.html"><img src="./img/logo.png" alt="logo" class="logo"></a>
+            <a href="index.html"><img src="./img/logo.png" alt="logo" class="logo"></a>
                 <ul>
-                    <li><a href="../pages/daw.html">Desarrollo Web</a></li>
-                    <li><a href="../pages/hosting.html">Hosting</a></li>
-                    <li><a href="../pages/seo.html">SEO</a></li>
-                    <li><a href="../pages/mantenimiento.html">Mantenimiento</a></li>
-                    <li><a href="../pages/gsmedia.html">Gestión de Redes Sociales</a></li>
-                    <li><a href="../pages/blog.html">Blog</a></li>
-                    <li><button class="empezamos" id="empezamos">¿Empezamos?</button></li>
+                    <li><a href="contacto.php">Contacto</a></li>
+                    <li><a href=""><img src="./img/iconos/icono_instagram.png" alt="instagram" class="icono"></a></li>
+                    <li><a href=""><img src="./img/iconos/icono_facebook.png" alt="facebook" class="icono"></a></li>
+                    <li><a href=""><img src="./img/iconos/icono_twitter.png" alt="twitter" class="icono"></a></li>
+                    <li><a href="aviso-legal.php">Aviso Legal</a></li>
+                    <li><a href="cookies.php">Políticas de Privacidad y Cookies</a></li>
                 </ul>
             </nav>
         </section>
-</header>
-<body>
-    <main>
-        <section class="contenedor-home">
-            <section class="contenedor-slogan">
-                <h1>Te ayudamos a digitalizar tu negocio</h1>
-            </section>
-            <section class="contenedor-imagen">
-                <img src="./img/home/imagen-bombilla.png" alt="">
-            </section>
-        </section>
-        <section class="contenedor-marcas">
-            <h2>Algunos de nuestros clientes</h2>
-            <img src="./img/home/marcas.png" alt="marcas" class="marcas">
-        </section>
-        </div>
-    </main>
-<footer>
-<section class="contenedor">
-        <nav>
-        <a href="index.html"><img src="./img/logo.png" alt="logo" class="logo"></a>
-            <ul>
-                <li><a href="contacto.php">Contacto</a></li>
-                <li><a href=""><img src="./img/iconos/icono_instagram.png" alt="instagram" class="icono"></a></li>
-                <li><a href=""><img src="./img/iconos/icono_facebook.png" alt="facebook" class="icono"></a></li>
-                <li><a href=""><img src="./img/iconos/icono_twitter.png" alt="twitter" class="icono"></a></li>
-                <li><a href="aviso-legal.php">Aviso Legal</a></li>
-                <li><a href="cookies.php">Políticas de Privacidad y Cookies</a></li>
-            </ul>
-        </nav>
-    </section>
-</footer>
+    </footer>
+</body>
 </html>
