--- a/pages/daw.html
+++ b/pages/daw.html
@@ -31,7 +31,7 @@
     <main>
         <section class="contenedor-imagen">
             <h1>Desarrollo Web</h1>
-            <img src="../img/home/code.jpg" alt="home" class="img-logo">
+            <img src="../img/daw/code.jpg" alt="home" class="img-logo">
         </section>
         <section class="contenedor-titulo">
             <h2>PLANES DE DESARROLLO WEB</h2>
