--- a/pages/daw.html
+++ b/pages/daw.html
@@ -17,7 +17,7 @@
             <nav>
                 <a href="../index.html"><img src="../img/logo.png" alt="logo" class="logo"></a>
                 <ul>
-                    <li><a href="pages/daw.html">Desarrollo Web</a></li>
+                    <li><a href="#">Desarrollo Web</a></li>
                     <li><a href="pages/hosting.html">Hosting</a></li>
                     <li><a href="pages/seo.html">SEO</a></li>
                     <li><a href="pages/mantenimiento.html">Mantenimiento</a></li>
