--- a/pages/gsmedia.html
+++ b/pages/gsmedia.html
@@ -18,7 +18,7 @@
                 <li><a href="pages/hosting.html">Hosting</a></li>
                 <li><a href="pages/seo.html">SEO</a></li>
                 <li><a href="pages/mantenimiento.html">Mantenimiento</a></li>
-                <li><a href="pages/gsmedia.html">Gestión de Redes Sociales</a></li>
+                <li><a href="#">Gestión de Redes Sociales</a></li>
                 <li><a href="pages/blog.html">Blog</a></li>
                 <li><button class="empezamos" id="empezamos">¿Empezamos?</button></li>
             </ul>
