--- a/pages/mantenimiento.html
+++ b/pages/mantenimiento.html
@@ -17,7 +17,7 @@
                 <li><a href="pages/daw.html">Desarrollo Web</a></li>
                 <li><a href="pages/hosting.html">Hosting</a></li>
                 <li><a href="pages/seo.html">SEO</a></li>
-                <li><a href="pages/mantenimiento.html">Mantenimiento</a></li>
+                <li><a href="#">Mantenimiento</a></li>
                 <li><a href="pages/gsmedia.html">Gestión de Redes Sociales</a></li>
                 <li><a href="pages/blog.html">Blog</a></li>
                 <li><button class="empezamos" id="empezamos">¿Empezamos?</button></li>
