--- a/pages/seo.html
+++ b/pages/seo.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="pages/daw.html">Desarrollo Web</a></li>
                 <li><a href="pages/hosting.html">Hosting</a></li>
-                <li><a href="pages/seo.html">SEO</a></li>
+                <li><a href="#">SEO</a></li>
                 <li><a href="pages/mantenimiento.html">Mantenimiento</a></li>
                 <li><a href="pages/gsmedia.html">Gestión de Redes Sociales</a></li>
                 <li><a href="pages/blog.html">Blog</a></li>
