--- a/pages/blog.html
+++ b/pages/blog.html
@@ -19,7 +19,7 @@
                 <li><a href="pages/seo.html">SEO</a></li>
                 <li><a href="pages/mantenimiento.html">Mantenimiento</a></li>
                 <li><a href="pages/gsmedia.html">Gestión de Redes Sociales</a></li>
-                <li><a href="pages/blog.html">Blog</a></li>
+                <li><a href="#">Blog</a></li>
                 <li><button class="empezamos" id="empezamos">¿Empezamos?</button></li>
             </ul>
         </nav>
