--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -15,7 +15,7 @@
             <a href="../index.html"><img src="../img/logo.png" alt="logo" class="logo"></a>
             <ul>
                 <li><a href="pages/daw.html">Desarrollo Web</a></li>
-                <li><a href="pages/hosting.html">Hosting</a></li>
+                <li><a href="#">Hosting</a></li>
                 <li><a href="pages/seo.html">SEO</a></li>
                 <li><a href="pages/mantenimiento.html">Mantenimiento</a></li>
                 <li><a href="pages/gsmedia.html">Gestión de Redes Sociales</a></li>
