--- a/pages/mantenimiento.html
+++ b/pages/mantenimiento.html
@@ -14,12 +14,12 @@
         <nav>
             <a href="../index.html"><img src="../img/logo.png" alt="logo" class="logo"></a>
             <ul>
-                <li><a href="pages/daw.html">Desarrollo Web</a></li>
-                <li><a href="pages/hosting.html">Hosting</a></li>
-                <li><a href="pages/seo.html">SEO</a></li>
+                <li><a href="daw.html">Desarrollo Web</a></li>
+                <li><a href="hosting.html">Hosting</a></li>
+                <li><a href="seo.html">SEO</a></li>
                 <li><a href="#">Mantenimiento</a></li>
-                <li><a href="pages/gsmedia.html">Gestión de Redes Sociales</a></li>
-                <li><a href="pages/blog.html">Blog</a></li>
+                <li><a href="gsmedia.html">Gestión de Redes Sociales</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><button class="empezamos" id="empezamos">¿Empezamos?</button></li>
             </ul>
         </nav>
