sass header and footer

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./sass/header.css">
     <link rel="stylesheet" href="./css/home.css">
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./sass/footer.css">
     <link rel="icon" type="image/png" href="../img/logo.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
     <!-- <link rel="stylesheet" media="(max-width: 800px)" href="./css/home.css" /> -->
@@ -60,7 +60,7 @@
         <section class="contenedor">
         <!-- SECTION CON EL MENÚ COMPUESTO POR UN NAV CON UNA LISTA DE ENLACES Y UN BOTON -->
             <nav>
-            <a href="index.html"><img src="./img/logo.png" alt="logo" class="logo"></a>
+                <a href="#"><img src="./img/logo.png" alt="logo" class="logo"></a>
                 <ul>
                     <li><a href="contacto.php">Contacto</a></li>
                     <li><a href=""><img src="./img/iconos/icono_instagram.png" alt="instagram" class="icono"></a></li>
