--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <link rel="icon" type="image/png" href="../img/logo.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
     <!-- <link rel="stylesheet" media="(max-width: 800px)" href="./css/home.css" /> -->
+    <script src="./js/script.js"></script>
     <title>DinoDTech</title>
 </head>
 <body>
     <header>
         <section class="contenedor">
-                <nav>
+            <button class="menu-desplegable" id="boton-menu" onclick="menu()">Menú</button>
+                <nav id="menu">
                     <a href="#"><img src="./img/logo.png" alt="logo" class="logo"></a>
                     <ul>
                         <li><a href="vistas/daw.html">Desarrollo Web</a></li>
